fix the show of a talk

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,1 @@
-© Euruko 2009 - Some rights reserved
+© Euruko 2009 - Creative Commons Share Alike | Icons from famfamfam | Design based on Radiant's styled site example theme
