--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -45,13 +45,13 @@ h3 {
   font-weight: bold; }
 
 h3 a {
-  color: #451811;
+  color: #850707;
   text-decoration: none;
   border-bottom: none;
   margin: 0px; }
 
 h3 a:hover {
-  color: #902f1c;
+  color: #BA0A0A;
   border-bottom: none; }
 
 h4 {
