user name also required

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,7 +9,7 @@
   <p><%= f.label :label, 'Login', :required => true %><br/>
   <%= f.text_field :login %></p>
 
-  <p><%= f.label :name, 'Name' %><br/>
+  <p><%= f.label :name, 'Name', :required => true %><br/>
   <%= f.text_field :name %></p>
 
   <p><%= f.label :email, 'Email', :required => true %><br/>
