updating attendees list when i say goin or not

--- a/app/views/papers/_attendees.html.erb
+++ b/app/views/papers/_attendees.html.erb
@@ -35,4 +35,11 @@
     <% end %>
   </p>
   <% end %>
+  
+  <ul>
+    <% @paper.attendees.each do |attendee| %>
+      <li><%= attendee.user.name %></li>
+    <% end %>
+  </ul>
 </div>
+
