new rating system, changes in the order of attendees

--- a/app/views/papers/_attendees.html.erb
+++ b/app/views/papers/_attendees.html.erb
@@ -1,19 +1,27 @@
 <div id="attendee">
+  <ul>
+    <% @paper.attendees.each do |attendee| %>
+      <li><%= attendee.user.name %></li>
+    <% end %>
+  </ul>
+
   <span id='attendee_error'></span>
 
   <span id='attendee_loading' style="display:none; clear:both">
     <%= image_tag 'spinner.gif' %>
   </span>
 
+  <% if !current_user.nil? %>
   <p>
-    I think
-    <% if !current_user.nil? %>
+    <br/>
     <% @attendee = Attendee.find_by_paper_id_and_user_id( @paper.id, current_user.id ) %>
 
+    Will you attend?
+    
     <% if !@attendee.nil? %>
       <%= 
         link_to_remote(
-          'I\'m not going',
+          'No, I\'m not going',
           :url => paper_attendee_path( @paper, @attendee ), 
           :method => :delete,
           :update => { :success => "attendee", :failure => "attendee_error" },
@@ -24,7 +32,7 @@
     <% else %>
       <%= 
         link_to_remote(
-          'I\'m going',
+          'Yes, I\'m going',
           :url => paper_attendees_path( @paper ), 
           :method => :post,
           :update => { :success => "attendee", :failure => "attendee_error" },
@@ -36,10 +44,5 @@
   </p>
   <% end %>
   
-  <ul>
-    <% @paper.attendees.each do |attendee| %>
-      <li><%= attendee.user.name %></li>
-    <% end %>
-  </ul>
 </div>
 
