--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -1,13 +1,12 @@
 <% title "#{@paper.title}" %>
 
-<h3>Talk Details</h3>
-
-<h4>
+<h3>
+  Talk:
   <%= yield(:title) %>
   <% if logged_in? && current_user.is_speaker_on_or_admin?( @paper ) %>
-    <%= link_to 'Edit', edit_paper_path(@paper) %>
+    <%= link_to image_tag('edit.png'), edit_paper_path(@paper) %>
   <% end %>
-</h4>
+</h3>
 
 <div class="entry">
   <%= image_tag @paper.photo.url(:medium), :class => 'avatar' %>
