update sidebar info

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -8,10 +8,11 @@
   <%= image_tag "europe.png" %>
   <h3>What's EuRuKo?</h3>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-    nisi ut aliquip ex ea commodo consequat.
+    Euruko is an annual conference about the Ruby programming
+    language with an informal atmosphere and lots of opportunities 
+    to listen, to talk, to hack and to have fun.
+    This year takes place on Barcelona, Spain, the days 9th and 10th
+    of May.
   </p>
 </div>
 
@@ -19,10 +20,10 @@
   <%= image_tag "twitter.png" %>
   <h3>Follow us on Twitter</h3>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-    nisi ut aliquip ex ea commodo consequat.
+    We've got a Twitter account to keep you up to date on everything
+    related with the conference. If you follow us you'll be getting
+    the most updated information. The user is
+    <a href="http://twitter.com/euruko">@euruko</a>
   </p>
 </div>
 
@@ -30,10 +31,10 @@
   <%= image_tag "ruby.png" %>
   <h3>Got Ruby?</h3>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-    nisi ut aliquip ex ea commodo consequat.
+    Ruby is a dynamic, open source programming language with a focus 
+    on simplicity and productivity. It has an elegant syntax that is 
+    natural to read and easy to write.
+    <a href="http://www.ruby-lang.org/en/about/">More...</a>
   </p>
 </div>
 
