static pages.. help

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -9,7 +9,7 @@
     <%= menu_to 'Events', events_path %>
     <%= menu_to 'People', users_path(:page => 1) %>
     <%= menu_to 'Blog', 'http://euruko2009.org' %>
-    <%= menu_to 'Help', '/help' %>
+    <%= menu_to 'Help', static_page_path( 'help' ) %>
   </ul>
 </div>
 
