--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -8,7 +8,7 @@
   <%= image_tag "europe.png" %>
   <h3>What's EuRuKo?</h3>
   <p>
-    Euruko is an annual conference about the Ruby programming
+    EuRuKo is an annual conference about the Ruby programming
     language with an informal atmosphere and lots of opportunities 
     to listen, to talk, to hack and to have fun.
     This year takes place on Barcelona, Spain, the days 9th and 10th
