--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
-© Euruko 2009 - <a href="http://creativecommons.org/licenses/by-sa/2.0/">Creative Commons Share Alike 2.0</a> |
+© EuRuKo 2009 - <a href="http://creativecommons.org/licenses/by-sa/2.0/">Creative Commons Share Alike 2.0</a> |
 Icons from <a href="http://famfamfam.com/">famfamfam</a> |
 Design based on <a href="http://radiantcms.org">Radiant</a>'s <a href="http://spurrd.com">Roasters Theme</a>
