:site_url => :site_domain

--- a/app/views/system_mailer/paper.erb
+++ b/app/views/system_mailer/paper.erb
@@ -1,6 +1,6 @@
 The paper <%= @paper.title %> has been submitted: 
 
-<%= paper_url(@paper, :host => APP_CONFIG[:site_url]) %>
+<%= paper_url(@paper, :host => APP_CONFIG[:site_domain]) %>
 
 For the user: <%= @paper.creator.name %> (<%= @paper.creator.id %>)
 
