--- a/app/views/user_mailer/forgotten_password.erb
+++ b/app/views/user_mailer/forgotten_password.erb
@@ -1,1 +1,1 @@
-<%= @user.login %>, click here to reset your password: <%= reset_password_url(:id => @user.password_reset_code, :host => APP_CONFIG[:site_url]) %>
+<%= @user.login %>, click here to reset your password: <%= reset_password_url(:id => @user.password_reset_code, :host => APP_CONFIG[:site_domain]) %>
