--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,25 +3,27 @@
 <h3><%= yield(:title) %></h3>
 
 <div class="entry">
-
   <p>
-    This is a list of things happenning at the conference:
+    From this page you can join the events happening at the conference. Check them out!
   </p>
-  
-  <ul>
+
+  <br/>
+
   <% for event in @events %>
-    <li><%= link_to event.name, event %></li>
-  
     <p>
+      <%= link_to event.name, event %>
+  
       <% if admin? %>
-        <%= link_to image_tag('edit.png'), edit_event_path(event) %></td>
+      <span class="actions">
+        <%= link_to image_tag('edit.png'), edit_event_path(event) %>
         <%= link_to image_tag('delete.png'), event, :confirm => 'Are you sure?', :method => :delete %>
+      </span>  
       <% end %>
     </p>
   <% end %>
-  </ul>
   
   <% if admin? %>
-    <p><%= link_to 'New event', new_event_path %></p>
+    <br/>
+    <p><%= link_to 'Create new event', new_event_path %></p>
   <% end %>
 </div>
