fixing lorem ipsums

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -41,10 +41,9 @@
 <div class="spot">
   <h3>Sponsorship</h3>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-    nisi ut aliquip ex ea commodo consequat.
+    We are looking for Ruby-related companies interested in sponsoring 
+    EuRuKo 2009. More info here: 
+    <%= link_to 'Sponsorship information', 'http://euruko2009.org/files/sponsorship_EuRuKo_2009.pdf' %>
   </p>
 </div>
 
@@ -54,5 +53,5 @@
     The conference is organised this year by the Spanish Ruby Users Group
     or as we like to call it <a href="http://www.srug.org">SRUG</a>.
   </p>
-  <p>You can join to the <a href="http://groups.google.es/group/euruko-spain-2009?hl=es">mailing list</a>.</p>
+  <p>You can join to the <a href="http://groups.google.es/group/euruko-spain-2009">mailing list</a>.</p>
 </div>
