--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -9,8 +9,8 @@
       <%= link_to image_tag('register.png'), signup_path, :id => "register-button" %>
       <h5>Registration open!</h5>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore.
+        We've opened the registration process for EuRuKo 2009. 
+        Go register yourself now, only 250 seats available!
       </p>
     </div>
   </div>
