--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -14,14 +14,21 @@
     On <%= @paper.date.nil? ? '(not date designed yet)' : @paper.date.strftime("%b #{@paper.date.day.ordinalize}, %H:%M %p") %> 
     at <%= @paper.room.nil? ? '(not room designed yet)' : @paper.room.name %>
   </h6>
+
   <p>
     By
+    <% counter = @paper.speakers.size %>
     <% @paper.speakers.collect{ |s| s.user }.each do |user| %>
+      <%= counter > 1 && counter < @paper.speakers.size ? "," : "and" unless counter >= @paper.speakers.size %>
       <%= link_to user.name, user %>
+      <% counter -= 1 %>
     <% end %>
   </p>
+
   <%= simple_format @paper.description %>
 
+
+  <% if !@paper.resources.empty?  %>
   <div id="resources">
     <h6>Resources</h6>
     <ul>
@@ -30,6 +37,7 @@
       <% end %>
     </ul>
   </div>
+  <% end %>
   
   <div id="valorations">
     <%= render :partial => 'papers/valorations', :locals => { :paper => @paper } %>
