link back to login

--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -12,4 +12,8 @@
   </p>
 <% end %>
 
-<!-- <p>Can't you remember your password? <%= link_to "Reset it!", reset_password_path %></p> -->
+<br/>
+
+<p>
+  <%= link_to "&laquo; Go back to log in", login_path %>
+</p>
